--- a/gb/20/9/17/n12411960.md
+++ b/gb/20/9/17/n12411960.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jhizar366/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jhizar366/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jhizar366/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jhizar366/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jhizar366/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jhizar366/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jhizar366/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jhizar366/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>人权活动家吴玉华：“三退”大潮将至中共覆灭</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>人权活动家吴玉华：“三退”大潮摧毁中共</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/Ad-Board-600x400.jpg" />
 <h6>由渥太华退党服务中心主办的汽车游行由大纪元办公室出发，途径市中心、中使馆、唐人街等地，呼吁人们远离中共，三退保平安。（任侨生／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年09月18日讯】（大纪元记者梁耀渥太华采访报道）人权活动家<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E5%90%B4%E7%8E%89%E5%8D%8E.md#1">吴玉华</a>（网名：<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E5%93%8E%E4%B9%8C.md#1">哎乌</a>）近日接受记者采访时表示，中国人权状况不断恶化，因言制罪现象非常严重；中国民众的“<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”大潮不仅撼动中共，甚至真是要（覆）灭共产党了。</p>
-<p><ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E5%90%B4%E7%8E%89%E5%8D%8E.md#1">吴玉华</a>现居加拿大，曾参与过陈光诚探访团，援港自媒体、绝食志愿者，并曾为郭飞雄、张海涛、贾敬龙、高智晟等关注组工作。因参与维权活动长期被驱赶失业，办婚礼两遭绑架，流亡泰国，2018入泰国女监23天，2019入曼谷移民监63天，两次共绝食9天。</p>
-<figure id="attachment_12411980" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-12411980 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/09/Aiwu-450x469.jpg" alt="" width="450" b="469" /><figcaption class="wp-caption-text">人权活动家吴玉华（网名：<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E5%93%8E%E4%B9%8C.md#1">哎乌</a>）近日接受记者采访时表示，中国人权状况不断恶化，因言制罪现象非常严重；中国民众的“<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”大潮不仅撼动中共，甚至真是要（覆）灭共产党了。（吴玉华提供）</figcaption></figure>
+	<p>【大纪元2020年09月18日讯】（大纪元记者梁耀渥太华采访报导）人权活动家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%90%B4%E7%8E%89%E5%8D%8E.md#1">吴玉华</a>（网名：<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%93%8E%E4%B9%8C.md#1">哎乌</a>）近日接受记者采访时表示，中国人权状况不断恶化，因言制罪现象非常严重；中国民众的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”大潮不仅撼动中共，甚至真是要（覆）灭共产党了。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%90%B4%E7%8E%89%E5%8D%8E.md#1">吴玉华</a>现居加拿大，曾参与过陈光诚探访团，援港自媒体、绝食志愿者，并曾为郭飞雄、张海涛、贾敬龙、高智晟等关注组工作。因参与维权活动长期被驱赶失业，办婚礼两遭绑架，流亡泰国，2018年入泰国女监23天，2019年入曼谷移民监63天，两次共绝食9天。</p>
+<figure id="attachment_12411980" aria-describedby="caption-attachment-12411980" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/09/Aiwu-450x469.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-12411980 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/09/Aiwu-450x469.jpg" alt="" width="450" b="469" /></a><figcaption id="caption-attachment-12411980" class="wp-caption-text">人权活动家吴玉华（网名：<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%93%8E%E4%B9%8C.md#1">哎乌</a>）近日接受记者采访时表示，中国人权状况不断恶化，因言制罪现象非常严重；中国民众的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”大潮不仅撼动中共，甚至真是要（覆）灭共产党了。（吴玉华提供）</figcaption></figure>
 <p>记者：您是如何开始为中国人权发声的？</p>
 <p>吴玉华：我是2011年上微博以后，我才知道中共的人权现状，让我很震惊。我听说艾未未被抓了，失踪了80多天。你想他是个名人啊，还是个官二代，那普通人该是什么样子？真的很震惊，从来没想到会是这样的真实的状况。</p>
-<p>后来又知道了陈光诚，一个盲人律师，为被暴力计生的穷苦人维权，得罪了当地的领导，就给判了4年刑。他出来以后，全家人还一起软禁，也不让他上学，这件事情是没办法接受。当时在网上看到很多的强迁。我看到过一个老人，被推土机碾的像纸片一样，真的很受不了。2011年10月，探视陈光诚，当时有29个、30个人，大家一起到那里，都挨打了。</p>
+<p>后来又知道了陈光诚，一个盲人律师，为被暴力计生的穷苦人维权，得罪了当地的领导，就给判了4年刑。他出来以后，全家人还一起软禁，也不让他上学，这件事情是没办法接受。当时在网上看到很多的强迁。我看到过一个老人，被推土机碾得像纸片一样，真的很受不了。2011年10月，探视陈光诚，当时有29个、30个人，大家一起到那里，都挨打了。</p>
 <p>记者：你们当时是约好了吗？</p>
-<p>吴玉华：也没有刻意的约好，大家都说要去，但是就没有想到去这么多，本来我以为能有2、3个人就不错了，但是没想到突然一下来了这么多人，可能当时这件事情当时影响比较大。一个盲人，这样子对待人家。</p>
+<p>吴玉华：也没有刻意地约好，大家都说要去，但是就没有想到去这么多，本来我以为能有两三个人就不错了，但是没想到突然一下来了这么多人，可能当时这件事情当时影响比较大。一个盲人，这样子对待人家。</p>
 <p>记者：您当时住在什么地方？</p>
 <p>吴玉华：我是新疆的，我当时是在乌鲁木齐。我是新疆的汉族人。文革为了逃避迫害，我爷爷是国民党部队里的军官，如果我爸爸不跑的话，不去新疆，在老家留下就会被批斗死。</p>
-<p>记者：您在国内有没有机会看到《<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>》？</p>
+<p>记者：您在国内有没有机会看到《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>》？</p>
 <p>吴玉华：没有看到过。以前对法轮功真的是很不了解。一直以为好像共产党说的是事实。我在国内上不去自由门等的网站。但是我有一次，听到别人告诉我，说共产党那些宣传都是假的，好像是一个照相馆的老板，去洗照片，他就给我一块钱，上面写的那些字，然后就告诉我共产党说的都是谎言，法轮功都是很好的人，是被迫害的。我就明白了，因为他是一个普通人。</p>
 <p>记者：在国内有听过三退吗？</p>
 <p>吴玉华：有听说过，我不是党员，只是入过少先队，入过团。后来就不是团员了。后来听过法轮功朋友的介绍后，没有在你们的网站上声明，当时是在心里告诉神，我退出共产党的一切组织。</p>
@@ -26,9 +26,9 @@
 <p>吴玉华：这个事情是让共产党非常恐惧的，这可以带动很多人越来越多的人觉醒，以前都说中国人睡着了。现在看看能有这么人参加了，怎么能说中国人睡着了呢？</p>
 <p>这个活动，如果全世界的人都看到中国人是怎么觉醒了，他们会改变以往对中国的看法。我有些在海外的同事他们有说过，海外有一些本身是挺好的外国人，但是他们的认识不太清楚，不太明白，有些甚至说中国需要集权统治。听了这样的话，（我）就很气愤，如果他们知道退出共产党的活动，有这么多人参加，知道了中国人的觉醒程度，他们这种话肯定是不好意思说出口。他们的看法也会随之改变。这样不仅是撼动共产党，甚至真是要（覆）灭共产党了。</p>
 <p>记者：美国禁中共党员入境，怎么看很多人通过很多途径来退出党团队组织？</p>
-<p>吴玉华：虽然有些人（要<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>），可能很多人是抱着很功利的目的，想去美国才这样的，但是这个活动，我觉得是非常好的，这样下去，共产党不可质疑的要完了。人越来越少。</p>
-<p>（中共党员）他们现在待遇很好，公务员之类的，但是我们这边的活动，不断的导致它们的人肯定会越来越少的。</p>
-<p>记者：全球反共，各国都在看清中共的真相，您怎么看待现在这个形势的发展？</p>
+<p>吴玉华：虽然有些人（要<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>），可能很多人是抱着很功利的目的，想去美国才这样的，但是这个活动，我觉得是非常好的，这样下去，共产党不可质疑地要完了。人越来越少。</p>
+<p>（中共党员）他们现在待遇很好，公务员之类的，但是我们这边的活动，肯定会让它们的人越来越少。</p>
+<p>记者：全球反共，各国都看清中共的真相，您怎么看待现在这个形势的发展？</p>
 <p>吴玉华：这种形势完全是共产党逼得其它国家这样做，其它国家如果还不认清形势，还不反对共产党的话，那么陈光诚先生说的那句话就太对了，全世界就要万劫不复。</p>
 <p>共产党很邪恶的，做了这么多的恶，根据集权的本性，它们只要有了钱，有了能力，就一定会向外扩张，侵略别的国家。</p>
 <p>记者：举几个例子，怎么表现人权状况的恶化？</p>
@@ -44,52 +44,51 @@
 <p>我知道很多海外华人想回去回不去，不给他们办签证。这样事情越多越好，只有这样的事情越来越多，他们才能认识到中国跟中共的区别。他们才能认识到他们不是正常人。</p>
 <p>记者：很多人都认识到了中国不是中共，也慢慢形成反共的声势和力量，您怎么看待这个现象？</p>
 <p>吴玉华：太好了，早就该这样了。我们盼了很多年，盼到现在，才有现在这样的一个势头，一个状况，早就应该这样了。如果早10年是这样的话，甚至早20年是这样子的话，共产党怎么能统治到现在呢？但是现在这样子也真的很好，很开心。</p>
-<p>记者：怎么看待<ahref="https://github.com/jhizar366/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>的汽车游行活动？</p>
+<p>记者：怎么看待<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>的汽车游行活动？</p>
 <p>吴玉华：这个活动真的特别好。法轮功学员让我特别敬重的是他们几十年如一日，都在坚持这样的活动，大量大量的活动，这样做真的很好。</p>
 <p>这也是为什么共产党一直打压最厉害的就是法轮功，这是一个不可置疑的事实，法轮功朋友是最坚决，能力最强，坚持最久的，真的让我很敬重。</p>
 <p>如果所有的华人都能跟他们一样坚持下去的话，共产党真的撑不了几天了。我很期待这一天。我的很多朋友也都喜欢法轮功。</p>
-<p>责任编辑：岳东卿</p>
+<p>责任编辑：岳东卿#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jhizar366/djy/blob/master/gb/20/8/9/n12317666.md#1">加拿大退党中心集会游行 声援3.6亿人三退</a></li>
-<li><a href="https://github.com/jhizar366/djy/blob/master/gb/20/8/11/n12321426.md#1">王友群：大灾大难大迫害 难逃北京大审判</a></li>
-<li><a href="https://github.com/jhizar366/djy/blob/master/gb/20/8/19/n12342919.md#1">大陆山东国保警察退党记</a></li>
-<li><a href="https://github.com/jhizar366/djy/blob/master/gb/20/8/19/n12343595.md#1">张菁：中共倒行逆施做事适得其反</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/9/n12317666.md#1">加拿大退党中心集会游行 声援3.6亿人三退</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/11/n12321426.md#1">王友群：大灾大难大迫害 难逃北京大审判</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/19/n12342919.md#1">大陆山东国保警察退党记</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/19/n12343595.md#1">张菁：中共倒行逆施做事适得其反</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/jhizar366/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437477.md#1" target="_blank">世纪正邪之战 美国总统及各级政要支持法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/6/28/n12217817.md#1">袭人，即是人生本身</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/8/30/n12367994.md#1">古今六大预言 2020年前后的大交集(上)</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/8/10/n12319003.md#1">【命理】身居高位却在晚年被斩首的命</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/16/n12407791.md#1">美国司法部宣布起诉和逮捕中共黑客</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/16/n12408984.md#1">【一线采访】瑞丽突封城 肉价涨至100元</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/17/n12411078.md#1">【有冇搞错】美次卿访台 七种武器不仅防卫台海</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/15/n12404057.md#1">芯片断供首日无B方案 业界：华为没路了</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/15/n12405772.md#1">蓬佩奥揭习近平“复兴大业”真实目的</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/15/n12405739.md#1">央视求和说引台湾强烈反弹 海峡论坛生变</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/16/n12406999.md#1">黄鸿升惊传猝死 享年36岁 经纪人证实</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/16/n12407803.md#1">黄鸿升猝逝 杨丞琳FB发文：我不会假装我很好</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/14/n12403678.md#1">杨超越回应演技争议 大陆演艺圈鄙视链曝光</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/16/n12407190.md#1">黄鸿升22小时前才发限时动态 疑浴室滑倒猝死</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/15/n12405837.md#1">与李小龙齐名的陈惠敏 罹患癌症疑闪婚冲喜</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/5/n12382976.md#1">疲劳与这些症状是肾出问题！3关键养肾</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/11/n12397178.md#1">吃素也得大肠癌？避2大致癌雷区 6招正确吃素</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/16/n12407151.md#1">美军士兵南海“秀肌肉” 战备之余不忘幽默</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/14/n12403162.md#1">别把它当老化  7症状恐是慢性淋巴性白血病</a></li>
-<li><a href="https://github.com/bhvnrr360/djy/blob/master/gb/20/9/15/n12404460.md#1">两只黑熊路边约会“拥抱” 加国警察护航</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jhizar366/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jhizar366/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/17/n12411960.htm">人权活动家吴玉华：“三退”大潮将至中共覆灭</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/17/n12411960.htm">人权活动家吴玉华：“三退”大潮摧毁中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jhizar366/djy/blob/master/gb/20/9/17/n12411960.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jhizar366/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jhizar366/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jhizar366/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jhizar366/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jhizar366/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/17/n12411960.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
